--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <label for="radio_female">Perempuan</label>
 
             <label for="input_address" id="label_address">Alamat</label>
-            <textarea name="" id="input_address" cols="30" rows="10" placeholder="Masukan Alamat"></textarea>
+            <textarea name="" id="input_address" rows="10" placeholder="Masukan Alamat"></textarea>
 
             <input type="checkbox" id="input_checkbox">
             <label for="input_checkbox">Ikuti semua peraturan</label>
